...
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="10dp"
        card_view:cardCornerRadius="30dp"
        card_view:cardBackgroundColor="@color/white">

        <androidx.appcompat.widget.SearchView
            android:id="@+id/qr_searchbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:queryHint="Enter location here"
            app:iconifiedByDefault="false" />

    </androidx.cardview.widget.CardView>
...
        android:layout_gravity="bottom|center"
        android:layout_marginBottom="30dp"
        card_view:cardCornerRadius="15dp"
        card_view:cardBackgroundColor="@color/quantum_bluegrey300">

        <Button
            android:id="@+id/qr_searcher"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:backgroundTint="@color/quantum_bluegrey300"
            android:foreground="?android:attr/actionModeWebSearchDrawable"
            android:foregroundTint="@color/white" />

...
